Fix profile page nickname overflowing

--- a/board/static/css/profile.scss
+++ b/board/static/css/profile.scss
@@ -17,7 +17,7 @@
 		}
 		.meta {
 			width:100%; box-sizing:border-box; padding:5px 20px; vertical-align:top;
-			h1 { height:1.25em; font:normal 40px "NanumGothicLight"; line-height:1.25em; margin:0; }
+			h1 { font:normal 40px "NanumGothicLight"; line-height:1.25em; margin:0; }
 			.score {
 				margin-top:10px; 
 
